A2-completed